public class Serie {

    String seriesLength;

    public String getSerie(){
        return "";
    }
}
