@startuml
!pragma layout smetana

class UserAccount {
String userName;
String password;
ArrayList <String> accountDoc;

loginMenu();
createAccount ();
}

class UsersMedia {
ArrayList <String> savedDoc;
ArrayList <String> watchedDoc;

updateSavedDoc ();
setSavedDoc ();
saveSavedDoc ();
updateWatchedDoc ();
setWatchedDoc ();
saveWatchedDoc ();

searchAndAct ();
}

class Super_MediaSearch {
+ searchMediaTitle ();
+ searchMediaCategory ();
}

interface IMedia {
String loadTitle ();
String loadCategories ();
double loadRating ();
int loadYear ();
}

class Movie {

+ getMovie ();
}

class Serie {
String seriesLength;

+ getSerie ();
}

package util {

class TextUI {
+ String displayMessage ();
+ String promptText ();
+ boolean promptQuestion ();
+ String IOExceptionMessage ();
}



class FileIO {
+ String readUserInput ();
+ String readFile ();
}

}

IMedia <|-- Serie
IMedia <|-- Movie

Super_MediaSearch -- Movie
Super_MediaSearch-- Serie

UsersMedia -- Super_MediaSearch
UsersMedia-- UserAccount


@enduml